fix: problem_idでのgetAPI削除
